// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render className prop correctly 1`] = `
<div>
  <div
    class="test-badge rc-badge rc-badge--top-right"
  >
    <i
      class="rc-badge__wrapper badge-icon van-icon van-icon-success"
    />
  </div>
</div>
`;

exports[`Badge should render content prop correctly 1`] = `
<div>
  <div
    class="rc-badge__wrapper"
  >
    <div
      class="child"
    />
    <div
      class="rc-badge rc-badge--top-right rc-badge--fixed"
    >
      <i
        class="rc-badge__wrapper badge-icon van-icon van-icon-success"
      />
    </div>
  </div>
</div>
`;

exports[`Badge should render nothing when content is empty string 1`] = `<div />`;

exports[`Badge should render nothing when content is undefined 1`] = `
<div>
  <div
    class="rc-badge rc-badge--top-right"
  >
    undefined
  </div>
</div>
`;

exports[`Badge should render nothing when content is zero 1`] = `
<div>
  <div
    class="rc-badge rc-badge--top-right"
  >
    0
  </div>
</div>
`;
